# zig-bazel-examples

01-hello-world/: BUILD.bazel  MODULE.bazel  README.md
01-hello-world/src/: main.zig
02-hello-world-cross-compilation/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
02-hello-world-cross-compilation/target-platforms/: BUILD.bazel
03-zig-dependency/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  base32.patch  lib_zls.patch
03-zig-dependency/backend/: BUILD.bazel
03-zig-dependency/backend/src/: main.zig
03-zig-dependency/src/: main.zig
