"""
This module sets up a Zap backend project with Bazel and Zig.
"""

module(
    name = "base32_example",
    version = "0.0.0",
)

# https://github.com/aherrmann/rules_zig/releases
bazel_dep(name = "rules_zig", version = "0.6.0")

# Zig toolchain
ZIG_VERSION = "0.13.0"
zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(zig_version = ZIG_VERSION)

bazel_dep(name = "base32", version = "", repo_name = "com_github_vctrmn_base32")

# Override base32 to a fork version with archive_override.
archive_override(
    module_name = "base32",
    strip_prefix = "base32-1226b44411138c49c341b6bdd56352cdd89bd449",
    urls = ["https://github.com/vctrmn/base32/archive/1226b44411138c49c341b6bdd56352cdd89bd449.tar.gz"],
)
