"""
This module sets up a base32 encoder project with Bazel and Zig.
"""

module(
    name = "base32_example",
    version = "0.0.0",
)

# https://github.com/aherrmann/rules_zig/releases
bazel_dep(name = "rules_zig", version = "0.6.0")

# Zig toolchain
ZIG_VERSION = "0.13.0"
zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(zig_version = ZIG_VERSION)

bazel_dep(name = "base32", version = "0.2.0", repo_name = "com_github_gernest_base32")

# Override base32 to a fork version with archive_override.
archive_override(
    module_name = "base32",
    strip_prefix = "base32-0.2.0",
    integrity = "sha256-RfeadDvxTgSdbztRYJ8YnoDSiTV7DJuxfQCL9RnFVgc=",
    urls = ["https://github.com/gernest/base32/archive/refs/tags/v0.2.0.tar.gz"],
    patches = ["//:lib_base32.patch"],
)
